--- a/app/src/main/res/layout/pokemon_item_load_state.xml
+++ b/app/src/main/res/layout/pokemon_item_load_state.xml
@@ -14,17 +14,16 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
-        app:strokeWidth="1dp"
-        app:strokeColor="@color/tint_secondary"
         android:background="?android:attr/selectableItemBackground"
-        android:clickable="true"
         android:elevation="4dp"
         app:cardCornerRadius="12dp"
         app:cardElevation="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeColor="@color/tint_secondary"
+        app:strokeWidth="1dp">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
