--- a/app/src/main/res/layout/card_pokemon_item.xml
+++ b/app/src/main/res/layout/card_pokemon_item.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="96dp">
+    android:layout_height="100dp"
+    android:layout_marginTop="4dp"
+    android:paddingBottom="4dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/pokemon_card"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="4dp"
         android:background="?android:attr/selectableItemBackground"
         android:clickable="true"
         android:elevation="4dp"
