--- a/app/src/main/res/layout/pokemon_item_load_state.xml
+++ b/app/src/main/res/layout/pokemon_item_load_state.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/pokemon_load_state"
     android:layout_width="match_parent"
-    android:layout_height="96dp">
+    android:layout_height="100dp"
+    android:layout_marginTop="4dp"
+    android:paddingBottom="4dp">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/load_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="4dp"
         android:background="?android:attr/selectableItemBackground"
         android:elevation="4dp"
         app:cardCornerRadius="12dp"
