--- a/app/src/main/res/layout/activity_pokemon.xml
+++ b/app/src/main/res/layout/activity_pokemon.xml
@@ -104,7 +104,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
-                    android:text="Pokedex Num"
+                    android:text="@string/pokedex_num"
                     android:textAllCaps="true"
                     app:layout_constraintEnd_toStartOf="@+id/pokemon_icon"
                     app:layout_constraintStart_toStartOf="parent"
@@ -116,7 +116,6 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:text="001"
                     android:textAllCaps="true"
                     app:layout_constraintEnd_toStartOf="@+id/pokemon_icon"
                     app:layout_constraintStart_toStartOf="parent"
@@ -129,7 +128,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
-                    android:text="Type"
+                    android:text="@string/type"
                     android:textAllCaps="true"
                     app:layout_constraintEnd_toStartOf="@+id/pokemon_icon"
                     app:layout_constraintStart_toStartOf="parent"
@@ -137,6 +136,7 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/type_first"
+                    android:visibility="gone"
                     style="@style/Headline3Surface1Left"
                     android:layout_width="wrap_content"
                     android:layout_height="32dp"
@@ -148,7 +148,6 @@
                     android:minWidth="0dp"
                     android:paddingStart="16dp"
                     android:paddingEnd="16dp"
-                    android:text="Grass"
                     android:textAllCaps="false"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/type_info"
@@ -156,6 +155,7 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/type_second"
+                    android:visibility="gone"
                     style="@style/Headline3Surface1Left"
                     android:layout_width="wrap_content"
                     android:layout_height="32dp"
@@ -166,7 +166,6 @@
                     android:minWidth="0dp"
                     android:paddingStart="16dp"
                     android:paddingEnd="16dp"
-                    android:text="Fire"
                     android:textAllCaps="false"
                     app:cornerRadius="36dp"
                     app:layout_constraintBaseline_toBaselineOf="@+id/type_first"
@@ -237,7 +236,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="8dp"
-                                android:text="HEIGHT"
+                                android:text="@string/height"
                                 app:layout_constraintTop_toBottomOf="@+id/image_height" />
 
                             <TextView
@@ -246,7 +245,6 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="8dp"
-                                android:text="2'04'' (0.7 m)"
                                 app:layout_constraintTop_toBottomOf="@+id/tv_height" />
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -274,7 +272,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="8dp"
-                                android:text="WEIGHT"
+                                android:text="@string/weight"
                                 app:layout_constraintTop_toBottomOf="@+id/image_weight" />
 
                             <TextView
@@ -283,7 +281,6 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="8dp"
-                                android:text="15.2 lbs. (6.9 kg)"
                                 app:layout_constraintTop_toBottomOf="@+id/tv_weight" />
 
 
@@ -313,21 +310,29 @@
                     android:layout_height="match_parent">
 
                     <TextView
+                        android:id="@+id/textView9"
                         style="@style/Headline2DarkCenter"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Abilities"
-                        android:layout_marginTop="4dp"
+                        android:layout_marginTop="8dp"
+                        android:text="@string/abilities"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <include layout="@layout/grid_ability"
-                        android:id="@+id/ability_grid"/>
-
+                    <include
+                        android:id="@+id/ability_grid"
+                        layout="@layout/grid_ability"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
+
+            <include
+                android:id="@+id/stats_card"
+                layout="@layout/card_stats" />
 
 
         </LinearLayout>
