--- a/app/src/main/res/layout/dialog_pokemon.xml
+++ b/app/src/main/res/layout/dialog_pokemon.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -34,7 +34,7 @@
             android:backgroundTint="@color/tint_secondary"
             android:insetTop="0dp"
             android:insetBottom="0dp"
-            android:text="OK"
+            android:text="@string/ok"
             android:textAllCaps="true"
             android:textColor="@color/white"
             app:cornerRadius="6dp"
@@ -47,4 +47,4 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
