--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -22,6 +22,7 @@
         <include
             android:id="@+id/empty_state_favorites"
             layout="@layout/layout_empty_state_favorites"
+            android:visibility="gone"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
