--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,7 +23,9 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/tint_primary_variant_pokemon</item>
+        <item name="android:statusBarColor" tools:targetApi="l">
+            @color/tint_primary_variant_pokemon
+        </item>
         <item name="android:windowLightStatusBar">true</item>
     </style>
 
@@ -36,5 +38,14 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">100%</item>
     </style>
+
+    <style name="Theme.Pokedex.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.Pokedex.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.Pokedex.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
