--- a/app/src/main/res/layout/fragment_damage.xml
+++ b/app/src/main/res/layout/fragment_damage.xml
@@ -8,55 +8,135 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:scrollbars="none"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/textView10"
+                android:id="@+id/tv_offensive"
                 style="@style/Headline2DarkCenter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Offensive"
+                android:text="@string/offensive"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <com.google.android.material.card.MaterialCardView
+            <TextView
+                android:id="@+id/desc_power"
+                style="@style/DescriptionDarkLeft"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:text="@string/power"
+                android:textAllCaps="true"
+                app:layout_constraintBottom_toTopOf="@+id/card_damage_2x"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/desc_type"
+                style="@style/DescriptionDarkLeft"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:layout_marginStart="72dp"
+                android:text="@string/types"
+                android:textAllCaps="true"
+                app:layout_constraintBottom_toTopOf="@+id/card_damage_2x"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <include
+                android:id="@+id/card_damage_2x"
+                layout="@layout/damage_card"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_marginStart="8dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="36dp"
-                android:layout_marginEnd="8dp"
-                android:backgroundTint="#3312ca5d"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="0dp"
+                app:layout_constraintTop_toBottomOf="@id/tv_offensive" />
+
+            <include
+                android:id="@+id/card_damage_0.5x"
+                layout="@layout/damage_card"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                app:layout_constraintTop_toBottomOf="@id/card_damage_2x" />
+
+            <include
+                android:id="@+id/card_damage_0x"
+                layout="@layout/damage_card"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                app:layout_constraintTop_toBottomOf="@id/card_damage_0.5x" />
+
+            <TextView
+                android:id="@+id/tv_defensive"
+                style="@style/Headline2DarkCenter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:text="@string/defensive"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView10">
+                app:layout_constraintTop_toBottomOf="@id/card_damage_0x" />
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/desc_power_def"
+                style="@style/DescriptionDarkLeft"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:text="@string/power"
+                android:textAllCaps="true"
+                app:layout_constraintBottom_toTopOf="@+id/card_defence_2x"
+                app:layout_constraintStart_toStartOf="parent" />
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="4dp"
-                        android:layout_height="match_parent"
-                        android:background="@color/success"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                android:id="@+id/desc_type_def"
+                style="@style/DescriptionDarkLeft"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:layout_marginStart="72dp"
+                android:text="@string/types"
+                android:textAllCaps="true"
+                app:layout_constraintBottom_toTopOf="@+id/card_defence_2x"
+                app:layout_constraintStart_toStartOf="parent" />
 
+            <include
+                android:id="@+id/card_defence_2x"
+                layout="@layout/damage_card"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="36dp"
+                app:layout_constraintTop_toBottomOf="@id/tv_defensive" />
 
+            <include
+                android:id="@+id/card_defence_0.5x"
+                layout="@layout/damage_card"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                app:layout_constraintTop_toBottomOf="@id/card_defence_2x" />
 
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-            </com.google.android.material.card.MaterialCardView>
-
+            <include
+                android:id="@+id/card_defence_0x"
+                layout="@layout/damage_card"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="64dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/card_defence_0.5x" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
